# AutoNav

./: .gitattributes  .gitmodules
docs/: drive_instructions.md  sick.md  zed.md
env/docker/: entrypoint.sh  run-container.sh  working-0-manifest.json  working-0.digest
env/docker/dockerfiles/: Dockerfile
env/docker/entrypoint_additions/: configure-LiDAR.sh  customize.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
isaac_ros-dev/: .gitignore
isaac_ros-dev/config/: Dockerfile.mine  build-control.sh  build-lidar.sh  build-zed.sh  launch_sensors.sh  run-lidar.sh  run-lines-real.sh  run-lines.sh  run-nav.sh  run-nav2.sh  run-rviz.sh  run-sim.sh  run-zed.sh
isaac_ros-dev/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
isaac_ros-dev/log/: latest_build  latest_list
isaac_ros-dev/src/actuator/: CMakeLists.txt
isaac_ros-dev/src/autonav_interfaces/: CMakeLists.txt  package.xml
isaac_ros-dev/src/autonav_sim/: CMakeLists.txt  package.xml
isaac_ros-dev/src/bringup/: CMakeLists.txt  package.xml
isaac_ros-dev/src/control/: CMakeLists.txt  package.xml
isaac_ros-dev/src/cpp_pubsub/: CMakeLists.txt  package.xml
isaac_ros-dev/src/gps_handler/: CMakeLists.txt  package.xml
isaac_ros-dev/src/gps_waypoint_handler/: package.xml  (+2 more)
isaac_ros-dev/src/gui/: CMakeLists.txt  package.xml
isaac_ros-dev/src/gui/src/: main.cpp
isaac_ros-dev/tmp/: SN33775276.conf  common_edited.yaml  frames_2025-05-07_22.01.34.gv  frames_2025-05-08_15.17.50.gv  frames_2025-05-18_14.34.49.gv  frames_2025-05-21_17.08.44.gv
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/src/detector/: CMakeLists.txt  package.xml
ros2_ws/src/detector/src/: main.cpp
scripts/: CurrentReadings.txt  MotorControlAPI.py  RPMReadings.txt  RemoteControl.py  TestScript.py  main.py  receiver.py  ser.py  server_bluetooth.cpp
scripts/commander/: forward_1.py  waypoint.py  waypoint_log.py
scripts/controller_autonav/: MotorControlAPI.py  RemoteControl.py  controller.py  main.py
scripts/estop/: RemoteControl.py  estop.py
scripts/tempcontrol/: MotorControlAPI.py  RemoteControl.py  bowser_reciever.py  bowser_remote.py  drive_instructions.md  drivebowser.py  echo_receiver.py  requirements.txt
scripts/test_estop/: estop_driver.py  fun  ser.cpp  serialib.hpp
(+686 files in other folders)
