<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detector</name>
  <version>0.0.0</version>
  <description>
  This package is designed to classify objects in the path of the robot, synthesizing multiple sensor inputs.
  Inputs: Processed camera image, LiDAR data 
  Output: List of Object centroids and distance. This is equivalent to the (x,y,z) location of the object
  </description>

  <maintainer email="jb5@vt.edu">joe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
